<resources>
    <string name="app_name">Learners Digital Logbook</string>

    <string name="about_page">Libraries Used:\nhttps://github.com/google/gson\nhttps://github.com/greenrobot/greenDAO\nhttps://github.com/PhilJay/MPAndroidChart\nhttps://github.com/akexorcist/Android-RoundCornerProgressBar\nhttps://github.com/square/okhttp\n\nAlso used a sample app to learn how to do custom transitions and text resizing:\nhttps://github.com/alexjlockwood/custom-lollipop-transitions\n\nGoogle Maps is also used but since the libraries are bundled with Google Play... I\'ll just leave their homepage here:\nhttps://developers.google.com/maps/documentation/android-api/</string>

    <string name="title_activity_drive_detail">Drive Detail</string>
    <string name="title_activity_new_drive">Start Driving</string>
    <string name="title_activity_driving">Driving</string>
    <string name="title_activity_driving_paused">Driving (Paused)</string>
    <string name="title_activity_post_drive">Finish Driving</string>
    <string name="title_activity_add_assets">Add Assets</string>
    <string name="title_activity_add_assets_param">Add %1$s</string>
    <string name="title_activity_settings">Settings</string>

    <string name="action_add_assets">Add New&#8230;</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_driver">Change Driver</string>
    <string name="action_about">About</string>

    <string name="name">Name</string>
    <string name="licence">Licence Number</string>
    <string name="plate">Licence Plate</string>
    <string name="add">Add</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="odometer">Odometer</string>
    <string name="see_more">See More</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="day">Day</string>
    <string name="dawn_dusk">Dawn/Dusk</string>
    <string name="night">Night</string>
    <string name="dry">Dry</string>
    <string name="wet">Wet</string>
    <string name="traffic_light">Light</string>
    <string name="traffic_medium">Medium</string>
    <string name="traffic_heavy">Heavy</string>
    <string name="car">Car</string>
    <string name="supervisor">Supervisor</string>
    <string name="daylight">Daylight</string>
    <string name="weather">Weather</string>
    <string name="traffic">Traffic</string>
    <string name="hours">Hours</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="drivers">Drivers</string>
    <string name="supervisors">Supervisors</string>
    <string name="cars">Cars</string>
    <string name="cont">Continue</string>
    <string name="stats">Stats</string>
    <string name="progress">Progress</string>
    <string name="total_progress">Total Progress</string>
    <string name="night_progress">Night Progress</string>
    <string name="parking">Parking</string>
    <string name="road_types">Road Types</string>
    <string name="road_local">Local St</string>
    <string name="road_main">Main Rd</string>
    <string name="road_city">Inner City</string>
    <string name="road_freeway">Freeway</string>
    <string name="road_rural_hwy">Rural Hwy</string>
    <string name="road_rural_other">Rural Other</string>
    <string name="road_gravel">Gravel</string>
    <string name="unknown">Unknown</string>
    <string name="cancel">Cancel</string>
    <string name="app_icon">App Icon</string>
    <string name="home">Home</string>
    <string name="past_drives">Past Drives</string>
    <string name="exit">Exit</string>

    <string name="emoji_day">☀️</string>
    <string name="emoji_sunset">🌇</string>
    <string name="emoji_night">🌘</string>
    <string name="emoji_dry">🌤️</string>
    <string name="emoji_wet">🌧️</string>

    <string name="home_recent_drives">Recent Drives</string>
    <string name="home_no_drives">You do not have any drives!</string>

    <string name="stats_day_night">Day/Night breakdown</string>

    <string name="welcome_title">Welcome to\nLearners Digital Logbook</string>
    <string name="welcome_text">You can have multiple drivers (learner), supervisors, and cars.\n\nSince this is your first time launching the app we\'ll walk you through setting them up.</string>
    <string name="welcome_add_driver">Add New Drivers</string>
    <string name="welcome_add_supervisor">Add New Supervisors</string>
    <string name="welcome_add_car">Add New Cars</string>

    <string name="new_drive_choose_car">Choose your car</string>
    <string name="new_drive_choose_supervisor">Choose your supervisor</string>

    <string name="driving_notification_title">Driving for %1$s</string>
    <string name="driving_notification_title_paused">Driving for %1$s (Paused)</string>
    <string name="driving_notification_text">Distance: %1$s</string>

    <string name="progress_begin">Welcome %1$s, looks like you\'re just starting out!</string>
    <string name="progress_middle">Welcome back %1$s, looks like you\'ve been busy driving! Keep at it and you\'ll have your Ps in no time!</string>
    <string name="progress_end">Welcome back %1$s, looks like you\'re almost done! Just a bit more&#8230;!</string>
    <string name="progress_finish">Welcome back %1$s, looks like you\'re done! 🎉🎉🎉 (time to party!)</string>

    <string name="unexpected_error">Unexpected error occurred!</string>
    <string name="exit_confirm">Do you really want to exit?</string>
    <string name="total_hours_param">%1$s\nTotal Hours</string>
    <string name="write_file_failed">Writing to file failed</string>
    <string name="write_file_success">Logs have been saved to %1$s</string>
    <string name="open">Open</string>
    <string name="haveto_create_car">Please create a car before proceeding!</string>
    <string name="haveto_create_driver">Please create a driver before proceeding!</string>
    <string name="haveto_create_supervisor">Please create a supervisor before proceeding!</string>

</resources>
