<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="io.erfan.llogger.activity.RootActivity">
    <item
        android:id="@+id/action_edit_assets"
        android:orderInCategory="50"
        android:title="@string/action_add_assets"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_change_driver"
        android:orderInCategory="55"
        android:title="@string/action_change_driver"
        app:showAsAction="never">
        <menu />
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="110"
        android:title="@string/action_about"
        app:showAsAction="never"/>
</menu>
