<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progress"
        android:textAppearance="@style/text_item" />

    <TextView
        android:id="@+id/progress_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="Some message about user's progress"
        android:textSize="16sp"
        android:textAppearance="@style/text_item_label" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_progress"
        android:textAppearance="@style/text_item_label" />

    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
        android:id="@+id/progress_total"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        app:rcProgress="25"
        app:rcSecondaryProgress="30"
        app:rcProgressColor="@color/day"
        app:rcSecondaryProgressColor="@color/night"
        app:rcBackgroundColor="?android:windowBackground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/night_progress"
        android:textAppearance="@style/text_item_label" />

    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
        android:id="@+id/progress_night"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        app:rcProgress="25"
        app:rcSecondaryProgress="30"
        app:rcProgressColor="@color/night"
        app:rcBackgroundColor="?android:windowBackground" />
</LinearLayout>