<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.erfan.llogger.activity.DriveDetailActivity"
    tools:showIn="@layout/activity_drive_detail">

    <fragment
        android:id="@+id/detail_map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        class="com.google.android.gms.maps.SupportMapFragment"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/detail_light_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="36sp"
                tools:text=".W." />

            <TextView
                android:id="@+id/detail_light"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                tools:text="@string/dawn_dusk"
                android:textAlignment="center"
                android:textAppearance="@style/text_item_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:id="@+id/detail_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1hr 10min"
                android:textSize="48sp"
                android:textAppearance="@style/text_item" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/detail_weather_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="36sp"
                tools:text=".W." />

            <TextView
                android:id="@+id/detail_weather"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                tools:text="@string/wet"
                android:textAlignment="center"
                android:textAppearance="@style/text_item_label" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car"
                android:textAppearance="@style/text_item_label" />

            <TextView
                android:id="@+id/detail_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                tools:text="Dad's Car"
                android:textAppearance="@style/text_item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supervisor"
                android:textAppearance="@style/text_item_label" />

            <TextView
                android:id="@+id/detail_supervisor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                tools:text="Dad"
                android:textAppearance="@style/text_item" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textAppearance="@style/text_item_label" />

            <TextView
                android:id="@+id/detail_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                tools:text="3.2km"
                android:textAppearance="@style/text_item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traffic"
                android:textAppearance="@style/text_item_label" />

            <TextView
                android:id="@+id/detail_traffic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/traffic_heavy"
                android:textAppearance="@style/text_item" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
